[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-google-genai",
    "ffmpeg",
    "edge_tts",
    "pydub",
    "langchain-community",
    "audioop-lts",
    "pypdf>=5.8.0",
]
